--- a/portfolio/src/components/Projects/Projects.module.css
+++ b/portfolio/src/components/Projects/Projects.module.css
@@ -20,7 +20,7 @@
   flex-direction: row;
   flex-wrap: wrap;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   gap: 15px;
   width: 100%;
 }
